# ohte-harjoitusty-

./: .gitignore  README.md  pyproject.toml  tasks.py
documentation/: architecture.md  changelog.md  initial_plan.txt  requirements_spec.md  test_documentation.md  users_manual.md  workhourlog.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: machinesekvenssikaavio.md  monopoli.md  teht4.md
src/: database_connection.py  database_functions.py  friendgroup.py  index.py  login.py  main.py  participant.py  participants.py  participants_repo.py  placement.py  readwrite.py
src/application_logic/: participant.py  participants_repo.py  placement.py
src/data/: huono_kolumni.csv  login_database.sqlite  paavo.csv  test_database.sqlit  testi.csv  unittesting.csv  unittesting_additional.csv
src/file_and_database_functions/: database_connection.py  database_functions.py  readwrite.py
src/tests/: database_test.py  participants_test.py  placement_test.py
src/ui/: ui.py  ui_begin.py  ui_begin_placement.py  ui_finish.py  ui_finish_placement.py  ui_firstview.py  ui_info.py  ui_login.py  ui_logout.py  ui_main_view.py
